# polars-lazy-streaming-talk

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml
data/: taxi_zone_lookup.csv
notebooks/: pandas_vs_sql.py  polars_modes_diamonds.py  polars_modes_taxi.py
